<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_overlay2"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:paddingRight="20dp"
        android:paddingBottom="0dp">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:background="@drawable/search_bar_bg"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:paddingStart="50dp"
            android:paddingEnd="30dp"
            android:paddingBottom="2dp"
            android:imeOptions="actionSearch"
            android:textAlignment="textStart"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="6dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_x_search"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btn_search_clear"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_x_clear"
            android:visibility="gone"
            app:tint="@color/white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:visibility="visible"
            android:paddingTop="20dp" />
        
        <TextView
            android:id="@+id/txt_search_no_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_result"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="16sp"
            />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/layout_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:padding="10dp"
            android:background="@drawable/rounded_dropdown_bg"
            app:flexWrap="wrap"
            app:flexDirection="row"
            app:alignItems="flex_start"
            app:justifyContent="flex_start">

            <include layout="@layout/layout_chip_history"/>
            <include layout="@layout/layout_chip_history"/>
            <include layout="@layout/layout_chip_history"/>

        </com.google.android.flexbox.FlexboxLayout>

        <LinearLayout
            android:id="@+id/layout_suggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/rounded_dropdown_bg"
            android:visibility="gone">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_search_suggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:elevation="8dp"
                android:paddingTop="6dp" />

            <TextView
                android:id="@+id/txt_see_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="13dp"
                android:paddingBottom="14dp"
                android:text="@string/see_more"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>